update sidebar styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,10 +128,10 @@
         </div>
         <span>&nbsp;&nbsp;&nbsp;</span>
         <div class="navbar-snapshots-name">
-          <a class="no-underline" href="/blog/">Blog</a>&nbsp;
-          <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
-          <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
-          <a class="no-underline" href="/search/">Search</a>
+          <a class="menu-button" href="/blog/">Blog</a>&nbsp;
+          <a class="menu-button" href="/newsletters/">Newsletters</a>&nbsp;
+          <a class="menu-button" href="/snapshots/">Snapshots</a>&nbsp;
+          <a class="menu-button" href="/search/">Search</a>
         </div>
       </nav>
       {% endblock nav_bar %}
