--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -85,14 +85,14 @@ html {
 }
 
 body {
-  font-family: Menlo, "PT Mono", "Arial", "Helvetica", "Helvetica Neue", "Noto Sans TC", "PingFang TC", "PingFang SC", sans-serif, Georgia;
+  font-family: Inter, "Menlo", "PT Mono", "Arial", "Helvetica", "Helvetica Neue", "Noto Sans TC", "PingFang TC", "PingFang SC", sans-serif, Georgia;
   color: var(--color-text);
   background-color: var(--colors-background);
 }
 #root {
   margin-left: auto;
   margin-right: auto;
-  max-width: 120rem;
+  max-width: 100rem;
   padding-top: 60px;
 }
 h1 {
@@ -106,12 +106,13 @@ h1 {
 }
 h2 {
   font-size: 1.5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 0.4rem;
-  margin-bottom: 0.2rem;
+  padding-left: 1rem;
   line-height: 1.6;
   font-weight: 500;
   position: relative;
+  margin-top: 1.5rem;
+  border-left: 0.5rem solid #003C6D;
+  margin-left: -1.5rem;
 }
 h3 {
   font-size: 1.3rem;
@@ -119,7 +120,7 @@ h3 {
   padding-bottom: 0.4rem;
   margin-bottom: 0.2rem;
   line-height: 1.6;
-  font-weight: 500;
+  font-weight: bold;
   position: relative;
 }
 
@@ -172,8 +173,9 @@ pre > code {
 hr {
   display: block;
   height: 1px;
-  width: 100%;
-  border: 0.5px solid var(--colors-divider);
+  width: 30%;
+  margin: 0 auto;
+  border: 1px solid var(--colors-divider);
 }
 ul {
   margin-top: 1.4rem;
@@ -189,10 +191,11 @@ p {
 
 blockquote {
   padding: 1px 0 1px 1.5rem;
-  margin: 1.5rem 0;
+  margin-left: 1.2rem;
+  padding-right: 2rem;
   font-size: 1.4rem;
-  font-weight: 500;
   border-left: 5px solid var(--colors-primary);
+  background: #f5f5f5;
 }
 blockquote p {
   margin: 0.5rem 0;
@@ -203,6 +206,9 @@ ol,
 ul {
   font-size: 1.2rem;
   line-height: 2;
+}
+li {
+  margin-bottom: 0.5rem;
 }
 .no-underline {
   text-decoration: none;
@@ -321,6 +327,10 @@ a.muted,
 }
 .menu li:not(:last-child) {
   margin-right: 1rem;
+}
+.menu-button {
+  text-decoration: none;
+  margin-left: 1rem;
 }
 .m-l-2 {
   margin-left: 0.5rem;
@@ -522,6 +532,20 @@ li.inline {
     margin: 0 auto;
     margin-bottom: 2.5rem;
   }
+  .sidebar-element {
+    width: 100%;
+    background-color: #fff;
+    padding-left: 1.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+    max-width: 24rem;
+    min-width: 20rem;
+    margin-top: 1.4rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 2rem;
+  }
   .no-toc {
     width: 22rem;
   }
@@ -537,16 +561,16 @@ li.inline {
     top: 60px;
     height: calc(100vh - 60px);
     z-index: 1;
-    width: 22rem;
+    width: 28rem;
     overflow-y: auto;
   }
-  
   .sidebar ul {
-    border-left: 1px solid var(--colors-divider);
     list-style: none;
   }
   .sidebar li {
     font-size: 1.0rem;
+    margin-bottom: 0.5rem;
+    padding-right: 2rem;
   }
   .sidebar h2,
   .sidebar h3 {
@@ -570,23 +594,52 @@ li.inline {
   html {
     font-size: 12px;
   }
-  h1 {
-    font-size: 1.4rem;
-  }
   .element-container {
     width: 100%;
     height: auto;
   }
-  
   .element {
     width: 90%;
     background-color: #fff;
-    padding: 1.2rem 2rem;
+    padding-top: 2rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-bottom: 2.5rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
     max-width: 36rem;
     min-width: 20rem;
     margin: 0 auto;
     margin-top: -0.5rem;
     margin-bottom: 2.5rem;
+  }
+  .sidebar-element {
+    width: 90%;
+    background-color: #fff;
+    padding-top: 0.5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-bottom: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+    max-width: 36rem;
+    min-width: 20rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+  }
+  .sidebar ul {
+    list-style: none;
+  }
+  .sidebar li {
+    font-size: 1.0rem;
+    margin-bottom: 0.5rem;
+    padding-right: 1rem;
+  }
+  .sidebar h2,
+  .sidebar h3 {
+    margin-bottom: 0;
+    font-size: 1rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
+    border: none;
   }
 }
