--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -82,57 +82,40 @@
 {% endblock main%}
 
 {% block sidebar %}
-<aside class="sidebar px {% if page.toc %}{% else %}no-toc{% endif %}">
-{% if page.toc %}
-<body>
-  {% block newsletter_sidebar_slot %}{% endblock newsletter_sidebar_slot %}
-  {% if page.taxonomies %}
-  <h2>看更多相關文章</h2>
-  <ul class="list-none text-sm">
-    <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}">➤&emsp;其他 {{
-      page.taxonomies.categories[0] }} 分類</a><br>      
-    {% if page.taxonomies.tags -%}
-    {% for tag in page.taxonomies.tags %}
-    <a href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">➤&emsp;其他 {{ tag }} 標籤</a>{% if page.taxonomies.tags | length > 1 %}{% if
-    loop.index != page.taxonomies.tags | length %}<br>{% endif %}{% endif %}
-    {% endfor %}
-    {% endif %}
-    {% endif %}
-  </ul>
-  <br>
-  <br>
-</body>
-
+<aside class="sidebar">
+<div class="sidebar-element">
 <h2>看{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
 <ul>
   {% set all_blog_pages = get_section(path="blog/_index"~file_lang_path~".md") -%}
   {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
-  <li>
-    <a class="no-underline"
-      >{{ macro::post_side(page=page) }}
+  <li class="no-underline">
+    {{ macro::post_side(page=page) }}
   </li>
   {% endfor %} 
 </ul>
+</div>
+<div class="sidebar-element">
 <h2>看最新電子報</h2>
 <ul>
   {% set all_blog_pages = get_section(path="newsletters/_index"~file_lang_path~".md") -%}
   {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
-  <li>
+  <li class="no-underline">
     {{ macro::newsletters_side(page=page) }}
   </li>
   {% endfor %} 
 </ul>
+</div>
+<div class="sidebar-element">
 <h2>看更多文章</h2>
 <ul>
   <li class="no-underline">
-    <a href="/tag-list/">依{{ trans(key="label_tags",lang=lang) }}</a>
+    <a href="/tag-list/">{{ trans(key="label_tags",lang=lang) }}</a>
   </li>
   <li class="no-underline">
     <a href="/archive/">依時序</a>
   </li>
 </ul>
-<br>
-{% endif %}
+</div>
 </aside>
 
 {% endblock sidebar %}
