--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,4 @@
 {% extends "base.html" -%} 
-{% block nav_bar -%}
-<nav class="navbar-top">
-  <div>
-    <a class="navbar-a" href="{{ config.base_url~lang_prefix_path }}" >
-      <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-no-sub_FzfQ69.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
-      <span class="navbar-name">Pin 起來</span>
-    </a> 
-  </div>
-  <span>&nbsp;&nbsp;&nbsp;</span>
-  <div class="navbar-name">
-    <a class="no-underline" href="/blog/">Blog</a>&nbsp;
-    <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
-    <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
-    <a class="no-underline" href="/search/">Search</a>
-  </div>
-</nav>
-{% endblock nav_bar %}
 {% block main -%}
 <div class="element-container">
   <div class="element">
@@ -23,7 +6,7 @@
     {{ section.content | safe }}
     </section>
     <hr class="w-full">
-    <h2>也歡迎你留言</h2>
+    <h3>也歡迎你留言</h3>
     <br>
     <div id="cusdis_thread"
     data-host="https://comments.pinchlime.com"
@@ -38,37 +21,50 @@
 </div>
 {% endblock main -%}  
 {% block sidebar %}
-  <aside class="sidebar px">
+  <aside class="sidebar">
+  <div class="sidebar-element">
     <h2>{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
     <ul>
       {% set all_blog_pages = get_section(path="blog/_index"~file_lang_path~".md") -%}
-        <li>
             {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
+            <li class="no-underline">
             {{ macro::post_side(page=page) }}
+            </li>
             {% endfor %} 
+            <li class="no-underline">
             {{trans(key="label_all_posts",lang=lang) | markdown(inline=true) | safe}}
-        </li>
+            </li>
     </ul>
+  </div>
+  <div class="sidebar-element">
     <h2>{{trans(key="label_new_newsletters_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
     <ul>
         {% set all_blog_pages = get_section(path="newsletters/_index"~file_lang_path~".md") -%}
-        <li>
           {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
+          <li class="no-underline">
           {{ macro::newsletters_side(page=page) }}
+          </li>
           {% endfor %} 
+          <li class="no-underline">
           {{trans(key="label_all_newsletters",lang=lang) | markdown(inline=true) | safe}}
-        </li>
+          </li>
     </ul>
+  </div>
+  <div class="sidebar-element">
     <h2>{{trans(key="label_new_snapshots_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
     <ul>
         {% set all_blog_pages = get_section(path="snapshots/_index"~file_lang_path~".md") -%}
-        <li>
           {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
+          <li class="no-underline">
           {{ macro::snapshots_side(page=page) }}
+          </li>
           {% endfor %} 
+          <li class="no-underline">
           {{trans(key="label_all_snapshots",lang=lang) | markdown(inline=true) | safe}}
-        </li>
+          </li>
     </ul>
+  </div>
+  <div class="sidebar-element">
     <h2>{{trans(key="label_sorting_articles",lang=lang) | markdown(inline=true) | safe}}</h2>
     <ul>
         <li class="no-underline">
@@ -84,8 +80,11 @@
           <a href="{{lang_prefix_path}}snapshots/archive/">{{ trans(key="label_snapshot_archive",lang=lang) }}</a>
         </li>
     </ul>
+  </div>
+  <div class="sidebar-element">
       {% set custom_sidebar = get_section(path="sidebar/_index"~file_lang_path~".md") %} 
-      {{ custom_sidebar.content | safe }}          
+      {{ custom_sidebar.content | safe }}
+  </div>          
   </aside>
 {% endblock sidebar %}
 // sidebar 這段在 index (首頁)、section.html （blog頁）、newsletters.html （電子報首頁）、snapshots.html（snapshots首頁）都有，若要改動記得要一次改全部。
