--- a/templates/snapshot_page.html
+++ b/templates/snapshot_page.html
@@ -27,28 +27,33 @@
 {% endblock breadcrumbs %}
 {% block section_sidebar_slot %}
 <body>
+  <div class="sidebar-element">
   <h2>看更多相關 Snapshots</h2>
-  <ul class="list-none text-sm">
+  <ul>
+    <li class="no-underline">
     <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0],lang=lang) }}">➤&emsp;其他 {{
       page.taxonomies.kinds[0] }} 分類</a><br>      
+    </li>
     {% if page.taxonomies.tags -%}
     {% for tag in page.taxonomies.tags %}
+    <li class="no-underline">
     <a href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">➤&emsp;其他 {{ tag }} 標籤</a>{% if page.taxonomies.tags | length > 1 %}{% if
     loop.index != page.taxonomies.tags | length %}<br>{% endif %}{% endif %}
+    </li>
     {% endfor %}
     {% endif %}
   </ul>
-  <br>
-  <br>
+  </div>
 </body>
+<div class="sidebar-element">
 <h2>看其他{{trans(key="label_new_snapshots_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
 <ul>
   {% set all_blog_pages = get_section(path="snapshots/_index"~file_lang_path~".md") -%}
   {% for page in all_blog_pages.pages | slice(start=0,end=15)  %} 
-  <li>
-    <a class="no-underline"
-      >{{ macro::snapshots_side(page=page) }}
+  <li class="no-underline">
+    {{ macro::snapshots_side(page=page) }}
   </li>
   {% endfor %} 
 </ul>
+</div>
 {% endblock section_sidebar_slot %}
