--- a/templates/base.html
+++ b/templates/base.html
@@ -119,15 +119,15 @@
   <body>
     <section id="top">
       {% block nav_bar -%}
-      <nav class="navbar-snapshots-top">
+      <nav class="navbar-top">
         <div>
-          <a class="navbar-snapshots-a" style="color: #ffffff" href="{{ config.base_url~lang_prefix_path }}" >
+          <a class="navbar-a" style="color: #ffffff" href="{{ config.base_url~lang_prefix_path }}" >
             <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
-            <span class="navbar-snapshots-name">Pin 起來</span>
+            <span class="navbar-name">Pin 起來</span>
           </a> 
         </div>
         <span>&nbsp;&nbsp;&nbsp;</span>
-        <div class="navbar-snapshots-name">
+        <div class="navbar-name">
           <a class="menu-button" href="/blog/">Blog</a>&nbsp;
           <a class="menu-button" href="/newsletters/">Newsletters</a>&nbsp;
           <a class="menu-button" href="/snapshots/">Snapshots</a>&nbsp;
