--- a/templates/base.html
+++ b/templates/base.html
@@ -120,18 +120,19 @@
     <section id="top">
       {% block nav_bar -%}
       <nav class="navbar-top">
+        <div class="nav-container">
         <div>
           <a class="navbar-a" style="color: #ffffff" href="{{ config.base_url~lang_prefix_path }}" >
             <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
             <span class="navbar-name">Pin 起來</span>
           </a> 
         </div>
-        <span>&nbsp;&nbsp;&nbsp;</span>
         <div class="navbar-name">
-          <a class="menu-button" href="/blog/">Blog</a>&nbsp;
-          <a class="menu-button" href="/newsletters/">Newsletters</a>&nbsp;
-          <a class="menu-button" href="/snapshots/">Snapshots</a>&nbsp;
+          <a class="menu-button" href="/blog/">Blog</a>
+          <a class="menu-button" href="/newsletters/">Newsletters</a>
+          <a class="menu-button" href="/snapshots/">Snapshots</a>
           <a class="menu-button" href="/search/">Search</a>
+        </div>
         </div>
       </nav>
       {% endblock nav_bar %}
