--- a/templates/base.html
+++ b/templates/base.html
@@ -44,36 +44,14 @@
     <meta itemprop="headline" content="{{ config.title }}" />
     <meta itemprop="copyrightYear" content="{{ now() | date(format="%Y") }}" />
     <link rel="icon" href="{{ get_url(path="site/images/favicon-32x32.png",cachebust=true) }}"
-    type="image/x-icon"> <link rel="apple-touch-icon" sizes="57x57" href="{{
-    get_url(path="site/images/apple-icon-57x57.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="60x60" href="{{
-    get_url(path="site/images/apple-icon-60x60.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="72x72" href="{{
-    get_url(path="site/images/apple-icon-72x72.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="76x76" href="{{
-    get_url(path="site/images/apple-icon-76x76.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="114x114" href="{{
-    get_url(path="site/images/apple-icon-114x114.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="120x120" href="{{
-    get_url(path="site/images/apple-icon-120x120.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="144x144" href="{{
-    get_url(path="site/images/apple-icon-144x144.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="152x152" href="{{
-    get_url(path="site/images/apple-icon-152x152.png",cachebust=true) }}"> <link
-    rel="apple-touch-icon" sizes="180x180" href="{{
-    get_url(path="site/images/apple-icon-180x180.png",cachebust=true) }}"> <link rel="icon"
-    type="image/png" sizes="192x192" href="{{
-    get_url(path="site/images/android-icon-192x192.png",cachebust=true) }}"> <link rel="icon"
-    type="image/png" sizes="32x32" href="{{
-    get_url(path="site/images/favicon-32x32.png",cachebust=true) }}"> <link rel="icon"
-    type="image/png" sizes="96x96" href="{{
-    get_url(path="site/images/favicon-96x96.png",cachebust=true) }}"> <link rel="icon"
-    type="image/png" sizes="16x16" href="{{
-    get_url(path="site/images/favicon-16x16.png",cachebust=true) }}"> <link rel="manifest"
-    href="{{ get_url(path="site/images/manifest.json") }}">
+    type="image/x-icon"> 
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ get_url(path="site/images/android-icon-192x192.png",cachebust=true) }}"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ get_url(path="site/images/favicon-32x32.png",cachebust=true) }}"> 
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ get_url(path="site/images/favicon-96x96.png",cachebust=true) }}"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ get_url(path="site/images/favicon-16x16.png",cachebust=true) }}"> 
+    <link rel="manifest" href="{{ get_url(path="site/images/manifest.json") }}">
     <meta name="msapplication-TileColor" content="{{ config.extra.theme_color }}" />
-    <meta name="msapplication-TileImage" content="{{
-    get_url(path="site/images/ms-icon-144x144.png",cachebust=true) }}">
+    <meta name="msapplication-TileImage" content="{{ get_url(path="site/images/ms-icon-144x144.png",cachebust=true) }}">
     <meta name="theme-color" content="{{ config.extra.theme_color }}" />
 
     <meta
@@ -93,7 +71,7 @@
     {% if page.extra.image %}
     <meta property="og:image" content="{% block ogimg %}{{ page.extra.image }}{% endblock ogimg %}" />
     {% else %}
-    <meta property="og:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-1200-630_n3S1PT.png" />
+    <meta property="og:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-02-600-600_aVEEhG.png" />
     <meta property="og:image:width" content="600"/>
     <meta property="og:image:height" content="600"/>
     {% endif %}
@@ -108,7 +86,7 @@
       name="twitter:image:alt"
       content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}" />
     {% else %}
-    <meta name="twitter:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-1200-630_n3S1PT.png" />
+    <meta name="twitter:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-02-1200-630_1hIeSM.png" />
     <meta
       name="twitter:image:alt"
       content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}" />
