--- a/templates/page.html
+++ b/templates/page.html
@@ -58,7 +58,6 @@
       </header>
       {% endblock detail_meta -%}
       <section data-pagefind-body>
-      
         <section class="main">
           <section id="start"></section>
           <article>
@@ -74,7 +73,14 @@
             {% endif %}
              <br>
           </article>
+        </section>
+      </section>
+          <hr>
+          <section id="backlinks">
+            {{ macro::backlink(pages=page.backlinks) }}
+          </section>
           <hr class="w-full">
+          <section id="cusdis">
           <h3>Write your comment</h2>
           <br>
           <div id="cusdis_thread"
@@ -84,9 +90,10 @@
           data-page-url="{{ config.base_url }}{{ page.path }}"
           data-page-title="{{ page.title }}"
           data-theme="light"
-        ></div>
-        <script async defer src="https://comments.pinchlime.com/js/cusdis.es.js"></script>
-
+          ></div>
+          <script async defer src="https://comments.pinchlime.com/js/cusdis.es.js"></script>
+          </section>
+          <section id="contact">
           {% if config.extra.email %}
           <div id="email-comment" class="muted text-sm">
             <hr class="w-full">
@@ -99,15 +106,9 @@
               如果你對於<a href="https://pinchlime.com">本站</a>或本文有任何想討論或分享的，歡迎<a class="muted" href="mailto:mimir@hey.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>mimir@hey.com</code> 找我聊聊！
             </p>
             {% endif %}
-            
-
           </div>
           {% endif %}
-
-        </section>
-        
-       
-      </section>
+          </section>
 </div>
 {% endblock main%}
 
