--- a/templates/newsletter_page.html
+++ b/templates/newsletter_page.html
@@ -26,7 +26,7 @@
   </div>
 {% endblock breadcrumbs %}
 {% block detail_meta_slot -%}
-<span>第 {{page.extra.issues }} 期 ｜</span>
+<span># {{page.extra.issues }} &nbsp;</span>
 {% endblock detail_meta_slot -%}
 {% block newsletter_sidebar_slot %}
 <div class="sidebar-element">
