--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -110,7 +110,8 @@ h2 {
   line-height: 1.6;
   font-weight: 500;
   position: relative;
-  margin-top: 1.5rem;
+  margin-top: 1.0rem;
+  margin-bottom: 1.0rem;
   border-left: 0.5rem solid #003C6D;
   margin-left: -1.5rem;
 }
@@ -489,6 +490,14 @@ li.inline {
 .main-inner {
   padding-left: 1.4rem;
   padding-right:1.4rem;
+}
+.continue-reading-btn {
+  padding: 8px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
 }
 
 @media (min-width: 52rem) {
