--- a/templates/newsletters.html
+++ b/templates/newsletters.html
@@ -30,11 +30,10 @@
       {% for page in section_pages %}
     <div class="element">
       <article>
-        <h1><a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a></h1>
-        <div class="muted">
-          <span>第 {{page.extra.issues }} 期</span>
-          <span>｜</span>
-          <time pubdate>發布於 {{ page.date | date(format="%Y-%m-%d") }}</time> 
+        <h1><a class="no-underline" href="{{ page.permalink }}"># {{page.extra.issues }}&nbsp;{{ page.title }}</a></h1>
+        <div class="muted" style="justify-content: space-between;display: flex;">
+          <time pubdate>{{ page.date | date(format="%Y-%m-%d") }}</time> 
+          <span>{{ config.extra.author }}</span>
         </div>
         <div>{{ page.summary | safe }}</div>
         {% if page.taxonomies.tags %}
@@ -45,11 +44,11 @@
           {% endfor %}
         </p>
         {% endif %}
-        <div class="muted">
+        <div class="continue-reading-btn">
           <section>
-            <a class="text text-color" href="{{ page.permalink }}#continue-reading"><span>{{ trans(key="label_read_more",lang=lang) }} </span></a>
+            <a href="{{ page.permalink }}#continue-reading"><span>{{ trans(key="label_read_more",lang=lang) }} </span></a>
           </section>
-         <div>
+        </div>
       </article>
     </div>
       {% endfor %} 
