--- a/templates/snapshot_page.html
+++ b/templates/snapshot_page.html
@@ -42,7 +42,7 @@
 <div class="sidebar-element">
 <h2>看其他{{trans(key="label_new_snapshots_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
 <ul>
-  {% set all_blog_pages = get_section(path="snapshots/_index"~file_lang_path~".md") -%}
+  {% set all_blog_pages = get_section(path="snapshots/_index.md") -%}
   {% for page in all_blog_pages.pages | slice(start=0,end=15)  %} 
   <li class="no-underline">
     {{ macro::snapshots_side(page=page) }}
