--- a/templates/page.html
+++ b/templates/page.html
@@ -139,7 +139,7 @@
   <div class="sidebar-element">
   <h2>看其他{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
   <ul>
-    {% set all_blog_pages = get_section(path="blog/_index"~file_lang_path~".md") -%}
+    {% set all_blog_pages = get_section(path="blog/_index.md") -%}
     {% for page in all_blog_pages.pages | slice(start=0,end=10)  %} 
     <li class="no-underline">
       {{ macro::post_side(page=page) }}
